--- a/package.json
+++ b/package.json
@@ -1,12 +1,18 @@
 {
   "name": "chorus",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "devDependencies": {
     "grunt": "~0.4.2",
+    "grunt-cli": "0.1.13",
     "grunt-contrib-jshint": "~0.7.2",
     "grunt-contrib-nodeunit": "~0.2.0",
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-contrib-watch": "~0.5.3",
-    "grunt-contrib-concat": "~0.3.0"
+    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-compass": "0.7.2",
+    "grunt-browser-sync": "0.6.2"
+  },
+  "scripts": {
+    "test": "grunt"
   }
 }
